--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
+Que excelente notícia! Fico muito feliz que tenha dado certo. Ter o link funcionando é o passo mais importante.
+
+Agora, vamos deixar esse portfólio perfeito para o mercado canadense e, principalmente, para os recrutadores da CoolIT Systems.
+
+Traduzi todo o conteúdo para o inglês, utilizando os termos técnicos corretos (como shop floor, WIP, O2C) que demonstram sua senioridade.
+
+Aqui está o código HTML atualizado. Você só precisa copiar este novo código, ir lá no seu arquivo index.html no GitHub, clicar no ícone do lápis (Edit) para substituir o texto antigo e fazer o "Commit".
+
+Código em Inglês (Copie e substitua no seu index.html):
+HTML
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dulcionor Willian | Portfolio de TI e ERP</title>
+    <title>Dulcionor Willian | IT & ERP Portfolio</title>
     <style>
         :root {
-            --primary-color: #003366; /* Azul corporativo */
-            --secondary-color: #008080; /* Teal/Cyan para detalhes */
+            --primary-color: #003366; /* Corporate Blue */
+            --secondary-color: #008080; /* Teal/Cyan for accents */
             --bg-color: #f4f7f6;
             --text-color: #333;
         }
@@ -94,56 +104,56 @@
 
 <div class="container">
     
-    <section id="sobre">
-        <h2>Sobre Mim</h2>
-        <p>Profissional de TI versátil com mais de 20 anos de experiência liderando operações de tecnologia, governança de TI e implementação de ERPs (TOTVS, Senior Sistemas). Atualmente expandindo minha expertise para o ecossistema <strong>NetSuite (SuiteScript 2.0, SuiteFlow)</strong>. Minha paixão é traduzir necessidades complexas de negócios em soluções tecnológicas eficientes, unindo a visão de "chão de fábrica" com a estratégia corporativa de alto nível.</p>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Versatile IT professional with over 20 years of experience leading technology operations, IT governance, and ERP implementations (TOTVS, Senior Sistemas). Currently expanding my expertise into the <strong>NetSuite ecosystem (SuiteScript 2.0, SuiteFlow, SuiteAnalytics)</strong>. My passion lies in translating complex business needs into efficient technological solutions, successfully bridging the gap between "shop floor" realities and high-level corporate strategy.</p>
     </section>
 
     <section id="cases">
-        <h2>Cases de Sucesso & Projetos</h2>
+        <h2>Case Studies & Projects</h2>
 
         <div class="case-study">
-            <h3>Case 1: Transformação Digital e Migração de ERP (DWO IT)</h3>
-            <span class="tag">Gestão de Projetos</span>
-            <span class="tag">Implantação de ERP</span>
-            <span class="tag">Mapeamento de Processos</span>
-            <p><strong>O Desafio:</strong> Clientes PME precisavam modernizar suas operações, saindo de sistemas legados isolados para plataformas ERP integradas.</p>
-            <p><strong>A Solução:</strong> Liderou o ciclo de vida completo de implementação, desde o levantamento de requisitos (GAP Analysis) até o treinamento final de usuários e gestão de mudança. Mapeamento detalhado dos fluxos O2C (Order-to-Cash) e P2P (Procure-to-Pay).</p>
-            <p><strong>O Resultado:</strong> Aumento significativo na confiabilidade dos dados e automação de processos manuais, permitindo escalabilidade para o negócio dos clientes.</p>
+            <h3>Case 1: Digital Transformation & ERP Migration (DWO IT)</h3>
+            <span class="tag">Project Management</span>
+            <span class="tag">ERP Implementation</span>
+            <span class="tag">Process Mapping</span>
+            <p><strong>The Challenge:</strong> SMB clients needed to modernize their operations, transitioning from isolated legacy systems to fully integrated cloud ERP platforms.</p>
+            <p><strong>The Solution:</strong> Led the complete implementation lifecycle, from requirement gathering (GAP Analysis) to final user training and change management. Conducted detailed mapping of O2C (Order-to-Cash) and P2P (Procure-to-Pay) workflows.</p>
+            <p><strong>The Result:</strong> Significant increase in data reliability and automation of manual processes, establishing a scalable foundation for business growth.</p>
         </div>
 
         <div class="case-study">
-            <h3>Case 2: Governança e Excelência em Serviços de TI (CP Construction)</h3>
+            <h3>Case 2: IT Service Governance & Excellence (CP Construction)</h3>
             <span class="tag">ITIL</span>
             <span class="tag">ServiceNow</span>
             <span class="tag">SLA Management</span>
-            <p><strong>O Desafio:</strong> Operações distribuídas em múltiplos sites precisavam de um suporte de TI centralizado, previsível e mensurável.</p>
-            <p><strong>A Solução:</strong> Implementação de fluxos de trabalho no ServiceNow baseados nas melhores práticas ITIL. Criação de SOPs (Procedimentos Operacionais Padrão) robustos para integração e desligamento de usuários.</p>
-            <p><strong>O Resultado:</strong> Manutenção de uma taxa de <strong>98% de conformidade de SLA</strong>, além da entrega de dashboards executivos (Power BI) para tomada de decisão da liderança.</p>
+            <p><strong>The Challenge:</strong> Distributed operations across multiple corporate sites required centralized, predictable, and measurable IT support.</p>
+            <p><strong>The Solution:</strong> Implemented ServiceNow workflows based on ITIL best practices. Created robust SOPs (Standard Operating Procedures) for user lifecycle management (onboarding/offboarding).</p>
+            <p><strong>The Result:</strong> Maintained a <strong>98% SLA compliance rate</strong> and delivered actionable executive dashboards (Power BI) to support leadership decision-making.</p>
         </div>
 
         <div class="case-study">
-            <h3>Case 3: Otimização de WIP e Inventário na Manufatura (Projeto Atual / Estudo)</h3>
+            <h3>Case 3: WIP and Inventory Optimization in Manufacturing (Current Focus)</h3>
             <span class="tag">NetSuite</span>
             <span class="tag">SuiteScript 2.0</span>
             <span class="tag">Supply Chain</span>
-            <p><strong>O Foco:</strong> Aplicar 20 anos de conhecimento em ERP para resolver gargalos reais de produção física e rastreamento de inventário (WIP).</p>
-            <p><strong>A Abordagem:</strong> Integração de treinamentos técnicos avançados em NetSuite (Udemy) com a experiência prática de montagem mecânica na <strong>CoolIT Systems</strong> para desenhar fluxos de trabalho (SuiteFlow) que reduzam a discrepância entre o estoque físico e o sistema.</p>
+            <p><strong>The Focus:</strong> Applying 20 years of ERP knowledge to solve real-world production bottlenecks and Work-In-Progress (WIP) tracking challenges.</p>
+            <p><strong>The Approach:</strong> Integrating advanced technical NetSuite training (Udemy) with practical, hands-on mechanical assembly experience at <strong>CoolIT Systems</strong>. The goal is to design workflows (SuiteFlow) that eliminate the discrepancy between physical shop-floor inventory and system data, ensuring real-time accuracy.</p>
         </div>
     </section>
 
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Estou sempre aberto a discutir novas tecnologias, otimização de processos e oportunidades estratégicas.</p>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>I am always open to discussing new technologies, process optimization, and strategic opportunities.</p>
         <p>📧 Email: <a href="mailto:dulcionor@gmail.com">dulcionor@gmail.com</a></p>
-        <p>🔗 LinkedIn: <a href="https://linkedin.com/in/SEU-LINK-AQUI" target="_blank">Acesse meu perfil</a></p>
-        <p>📍 Localização: Calgary, AB - Canadá</p>
+        <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/dulcionor-willian-de-oliveira-56102574" target="_blank">Connect with me</a></p>
+        <p>📍 Location: Calgary, AB - Canada</p>
     </section>
 
 </div>
 
 <footer>
-    <p>&copy; 2026 Dulcionor Willian de Oliveira. Desenvolvido com foco em Resultados e Governança.</p>
+    <p>&copy; 2026 Dulcionor Willian de Oliveira. Developed with a focus on Results and Governance.</p>
 </footer>
 
 </body>
