--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dulcionor Willian | IT & ERP Portfolio</title>
+    <title>Dulcionor Willian de Oliveira | Portfólio de TI & Projetos</title>
     <style>
         :root {
-            --primary-color: #003366; /* Corporate Blue */
-            --secondary-color: #008080; /* Teal/Cyan for accents */
+            --primary-color: #003366; /* Azul corporativo */
+            --secondary-color: #008080; /* Teal/Cyan para detalhes */
             --bg-color: #f4f7f6;
             --text-color: #333;
         }
@@ -89,61 +89,54 @@
 
 <header>
     <h1>Dulcionor Willian de Oliveira</h1>
-    <p>Senior IT Project Manager & ERP Implementation Specialist</p>
+    <p>IT Project Manager | Especialista em Implantação de ERP & Cloud</p>
 </header>
 
 <div class="container">
     
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Versatile IT professional with over 20 years of experience leading technology operations, IT governance, and ERP implementations (TOTVS, Senior Sistemas). Currently expanding my expertise into the <strong>NetSuite ecosystem (SuiteScript 2.0, SuiteFlow, SuiteAnalytics)</strong>. My passion lies in translating complex business needs into efficient technological solutions, successfully bridging the gap between "shop floor" realities and high-level corporate strategy.</p>
+    <section id="sobre">
+        <h2>Sobre Mim</h2>
+        <p>Sou um Gerente Estratégico de Projetos de TI e Especialista em Infraestrutura Cloud com mais de 20 anos de experiência no gerenciamento e otimização de ambientes híbridos e em nuvem. Minha especialidade é conectar a execução técnica aos objetivos de alto nível do negócio, com forte atuação em implementações de ERP (como Mega Sistemas e RM Totvs), Business Intelligence (Power BI e SQL) e operações seguras de infraestrutura.</p>
+        <p>Possuo profunda experiência em Tecnologias Microsoft (Azure, Windows Server, Entra ID/M365) e foco na excelência de processos. Atualmente residindo em Calgary, AB, estou focado em alinhar plataformas de tecnologia a fluxos de trabalho organizacionais para garantir integridade de dados e eficiência operacional.</p>
     </section>
 
-    <section id="cases">
-        <h2>Case Studies & Projects</h2>
+    <section id="experiencia">
+        <h2>Experiência Profissional & Projetos</h2>
 
         <div class="case-study">
-            <h3>Case 1: Digital Transformation & ERP Migration (DWO IT)</h3>
-            <span class="tag">Project Management</span>
+            <h3>Gerenciamento de Projetos e Operações de TI (DwoTI Soluções & CP Construplan)</h3>
             <span class="tag">ERP Implementation</span>
-            <span class="tag">Process Mapping</span>
-            <p><strong>The Challenge:</strong> SMB clients needed to modernize their operations, transitioning from isolated legacy systems to fully integrated cloud ERP platforms.</p>
-            <p><strong>The Solution:</strong> Led the complete implementation lifecycle, from requirement gathering (GAP Analysis) to final user training and change management. Conducted detailed mapping of O2C (Order-to-Cash) and P2P (Procure-to-Pay) workflows.</p>
-            <p><strong>The Result:</strong> Significant increase in data reliability and automation of manual processes, establishing a scalable foundation for business growth.</p>
+            <span class="tag">Power BI & SQL</span>
+            <span class="tag">ITIL / ServiceNow</span>
+            <span class="tag">Microsoft 365</span>
+            <p><strong>O Desafio:</strong> Liderar equipes técnicas em operações distribuídas (multi-site), garantindo a entrega de serviços de alta qualidade, estabilidade de infraestrutura e migrações sistêmicas complexas.</p>
+            <p><strong>A Solução:</strong> Liderou a implantação e otimização de módulos de ERP e ferramentas de BI, traduzindo requisitos de negócios em dashboards no Power BI. Realizou gestão hands-on de infraestrutura, incluindo migrações de servidores, Active Directory e gerenciamento de ciclo de vida de usuários no Microsoft 365. Criou e implementou rigorosos Procedimentos Operacionais Padrão (SOPs).</p>
+            <p><strong>O Resultado:</strong> Atingimento e manutenção de uma taxa de <strong>98% de conformidade de SLA</strong> através do ServiceNow, além de reduzir drasticamente o tempo de resposta a incidentes.</p>
         </div>
 
         <div class="case-study">
-            <h3>Case 2: IT Service Governance & Excellence (CP Construction)</h3>
-            <span class="tag">ITIL</span>
-            <span class="tag">ServiceNow</span>
-            <span class="tag">SLA Management</span>
-            <p><strong>The Challenge:</strong> Distributed operations across multiple corporate sites required centralized, predictable, and measurable IT support.</p>
-            <p><strong>The Solution:</strong> Implemented ServiceNow workflows based on ITIL best practices. Created robust SOPs (Standard Operating Procedures) for user lifecycle management (onboarding/offboarding).</p>
-            <p><strong>The Result:</strong> Maintained a <strong>98% SLA compliance rate</strong> and delivered actionable executive dashboards (Power BI) to support leadership decision-making.</p>
-        </div>
-
-        <div class="case-study">
-            <h3>Case 3: WIP and Inventory Optimization in Manufacturing (Current Focus)</h3>
-            <span class="tag">NetSuite</span>
-            <span class="tag">SuiteScript 2.0</span>
-            <span class="tag">Supply Chain</span>
-            <p><strong>The Focus:</strong> Applying 20 years of ERP knowledge to solve real-world production bottlenecks and Work-In-Progress (WIP) tracking challenges.</p>
-            <p><strong>The Approach:</strong> Integrating advanced technical NetSuite training (Udemy) with practical, hands-on mechanical assembly experience at <strong>CoolIT Systems</strong>. The goal is to design workflows (SuiteFlow) that eliminate the discrepancy between physical shop-floor inventory and system data, ensuring real-time accuracy.</p>
+            <h3>Adaptação e Preparação Tecnológica (CoolIT Systems)</h3>
+            <span class="tag">Infraestrutura em Nuvem</span>
+            <span class="tag">Gestão de Laboratórios de TI</span>
+            <span class="tag">Controle de Qualidade</span>
+            <p><strong>O Foco:</strong> Combinar a visão prática da área de produção mecânica com a estruturação de ambientes de tecnologia corporativa.</p>
+            <p><strong>A Abordagem:</strong> Atuando em Calgary desde o início de 2025 com controle de qualidade e leitura de documentações técnicas de montagem, enquanto construo e administro simultaneamente laboratórios de TI de nível corporativo (Active Directory, DNS, DHCP, File Services, Backup e Monitoramento) para reestabelecer e expandir minha carreira técnica no mercado canadense.</p>
         </div>
     </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>I am always open to discussing new technologies, process optimization, and strategic opportunities.</p>
-        <p>📧 Email: <a href="mailto:dulcionor@gmail.com">dulcionor@gmail.com</a></p>
-        <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/dulcionor-willian-de-oliveira-56102574" target="_blank">Connect with me</a></p>
-        <p>📍 Location: Calgary, AB - Canada</p>
+    <section id="contato">
+        <h2>Contato</h2>
+        <p>Estou sempre aberto a discutir novas oportunidades em gerenciamento de projetos, infraestrutura ou suporte estratégico de TI.</p>
+        <p>📞 Telefone: <strong>(368) 886-6616</strong></p>
+        <p>📧 Email: <a href="mailto:dulcionor@hotmail.com">dulcionor@hotmail.com</a></p>
+        <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/dulcionor-willian-de-oliveira-56102574" target="_blank">Acesse meu perfil no LinkedIn</a></p>
+        <p>📍 Localização: Calgary, AB - Canadá</p>
     </section>
 
 </div>
 
 <footer>
-    <p>&copy; 2026 Dulcionor Willian de Oliveira. Developed with a focus on Results and Governance.</p>
+    <p>&copy; 2026 Dulcionor Willian de Oliveira. Desenvolvido com foco em Resultados, Governança e Otimização.</p>
 </footer>
 
 </body>
