--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dulcionor Willian de Oliveira | Portfólio de TI & Projetos</title>
+    <title>Dulcionor Willian de Oliveira | IT & Projects Portfolio</title>
     <style>
         :root {
-            --primary-color: #003366; /* Azul corporativo */
-            --secondary-color: #008080; /* Teal/Cyan para detalhes */
+            --primary-color: #003366; /* Corporate Blue */
+            --secondary-color: #008080; /* Teal/Cyan for accents */
             --bg-color: #f4f7f6;
             --text-color: #333;
         }
@@ -89,54 +89,54 @@
 
 <header>
     <h1>Dulcionor Willian de Oliveira</h1>
-    <p>IT Project Manager | Especialista em Implantação de ERP & Cloud</p>
+    <p>IT Project Manager | ERP Implementation & Cloud Specialist</p>
 </header>
 
 <div class="container">
     
-    <section id="sobre">
-        <h2>Sobre Mim</h2>
-        <p>Sou um Gerente Estratégico de Projetos de TI e Especialista em Infraestrutura Cloud com mais de 20 anos de experiência no gerenciamento e otimização de ambientes híbridos e em nuvem. Minha especialidade é conectar a execução técnica aos objetivos de alto nível do negócio, com forte atuação em implementações de ERP (como Mega Sistemas e RM Totvs), Business Intelligence (Power BI e SQL) e operações seguras de infraestrutura.</p>
-        <p>Possuo profunda experiência em Tecnologias Microsoft (Azure, Windows Server, Entra ID/M365) e foco na excelência de processos. Atualmente residindo em Calgary, AB, estou focado em alinhar plataformas de tecnologia a fluxos de trabalho organizacionais para garantir integridade de dados e eficiência operacional.</p>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Strategic IT Project Manager & Cloud Infrastructure Specialist with over 20 years of experience managing and optimizing hybrid on-premises and cloud environments. I bridge the gap between complex technical execution and high-level business goals, specializing in ERP implementation (Mega Sistemas, RM Totvs), Business Intelligence (Power BI, SQL), and secure infrastructure operations.</p>
+        <p>I bring a deep technical background in Microsoft Technologies (Azure, Windows Server, Entra ID/M365) paired with a proactive management approach to drive service delivery improvements. Currently based in Calgary, AB, my focus is on aligning technology platforms with organizational workflows to ensure data integrity and seamless transitions during complex software rollouts.</p>
     </section>
 
-    <section id="experiencia">
-        <h2>Experiência Profissional & Projetos</h2>
+    <section id="experience">
+        <h2>Professional Experience & Case Studies</h2>
 
         <div class="case-study">
-            <h3>Gerenciamento de Projetos e Operações de TI (DwoTI Soluções & CP Construplan)</h3>
+            <h3>IT Project Management & Operations (DwoTI & CP Construplan)</h3>
             <span class="tag">ERP Implementation</span>
             <span class="tag">Power BI & SQL</span>
             <span class="tag">ITIL / ServiceNow</span>
             <span class="tag">Microsoft 365</span>
-            <p><strong>O Desafio:</strong> Liderar equipes técnicas em operações distribuídas (multi-site), garantindo a entrega de serviços de alta qualidade, estabilidade de infraestrutura e migrações sistêmicas complexas.</p>
-            <p><strong>A Solução:</strong> Liderou a implantação e otimização de módulos de ERP e ferramentas de BI, traduzindo requisitos de negócios em dashboards no Power BI. Realizou gestão hands-on de infraestrutura, incluindo migrações de servidores, Active Directory e gerenciamento de ciclo de vida de usuários no Microsoft 365. Criou e implementou rigorosos Procedimentos Operacionais Padrão (SOPs).</p>
-            <p><strong>O Resultado:</strong> Atingimento e manutenção de uma taxa de <strong>98% de conformidade de SLA</strong> através do ServiceNow, além de reduzir drasticamente o tempo de resposta a incidentes.</p>
+            <p><strong>The Challenge:</strong> Leading technical teams across multi-site operations, ensuring high-quality service delivery, infrastructure stability, and managing complex systemic migrations.</p>
+            <p><strong>The Solution:</strong> Spearheaded the implementation and optimization of ERP modules and BI tools, translating business requirements into data-driven Power BI dashboards. Provided hands-on infrastructure management, including server migrations, Active Directory, and M365 user lifecycle management. Developed and implemented rigorous Standard Operating Procedures (SOPs).</p>
+            <p><strong>The Result:</strong> Achieved and maintained a <strong>98% SLA compliance rate</strong> through ServiceNow and drastically reduced incident response times by streamlining workflows.</p>
         </div>
 
         <div class="case-study">
-            <h3>Adaptação e Preparação Tecnológica (CoolIT Systems)</h3>
-            <span class="tag">Infraestrutura em Nuvem</span>
-            <span class="tag">Gestão de Laboratórios de TI</span>
-            <span class="tag">Controle de Qualidade</span>
-            <p><strong>O Foco:</strong> Combinar a visão prática da área de produção mecânica com a estruturação de ambientes de tecnologia corporativa.</p>
-            <p><strong>A Abordagem:</strong> Atuando em Calgary desde o início de 2025 com controle de qualidade e leitura de documentações técnicas de montagem, enquanto construo e administro simultaneamente laboratórios de TI de nível corporativo (Active Directory, DNS, DHCP, File Services, Backup e Monitoramento) para reestabelecer e expandir minha carreira técnica no mercado canadense.</p>
+            <h3>Technological Adaptation & Preparation (CoolIT Systems)</h3>
+            <span class="tag">Cloud Infrastructure</span>
+            <span class="tag">IT Lab Management</span>
+            <span class="tag">Quality Control</span>
+            <p><strong>The Focus:</strong> Combining practical mechanical production insights with corporate technology structuring.</p>
+            <p><strong>The Approach:</strong> Working in Calgary since early 2025 with quality control and technical assembly documentation, while concurrently building and administering enterprise-grade IT lab environments (Active Directory, DNS, DHCP, File Services, Backup, and Monitoring) to actively re-establish and expand my technical career in the Canadian market.</p>
         </div>
     </section>
 
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Estou sempre aberto a discutir novas oportunidades em gerenciamento de projetos, infraestrutura ou suporte estratégico de TI.</p>
-        <p>📞 Telefone: <strong>(368) 886-6616</strong></p>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>I am always open to discussing new opportunities in project management, infrastructure, or strategic IT support.</p>
+        <p>📞 Phone: <strong>+1 (368) 886-6616</strong></p>
         <p>📧 Email: <a href="mailto:dulcionor@hotmail.com">dulcionor@hotmail.com</a></p>
-        <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/dulcionor-willian-de-oliveira-56102574" target="_blank">Acesse meu perfil no LinkedIn</a></p>
-        <p>📍 Localização: Calgary, AB - Canadá</p>
+        <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/dulcionor-willian-de-oliveira-56102574" target="_blank">Connect with me on LinkedIn</a></p>
+        <p>📍 Location: Calgary, AB - Canada</p>
     </section>
 
 </div>
 
 <footer>
-    <p>&copy; 2026 Dulcionor Willian de Oliveira. Desenvolvido com foco em Resultados, Governança e Otimização.</p>
+    <p>&copy; 2026 Dulcionor Willian de Oliveira. Developed with a focus on Results, Governance, and Optimization.</p>
 </footer>
 
 </body>
