--- a/index.html
+++ b/index.html
@@ -115,12 +115,19 @@
         </div>
 
         <div class="case-study">
-            <h3>Technological Adaptation & Preparation (CoolIT Systems)</h3>
-            <span class="tag">Cloud Infrastructure</span>
+            <h3>Mechanical Assembly | IT Professional in Transition (CoolIT Systems)</h3>
+            <span class="tag">Canadian Experience</span>
             <span class="tag">IT Lab Management</span>
             <span class="tag">Quality Control</span>
-            <p><strong>The Focus:</strong> Combining practical mechanical production insights with corporate technology structuring.</p>
-            <p><strong>The Approach:</strong> Working in Calgary since early 2025 with quality control and technical assembly documentation, while concurrently building and administering enterprise-grade IT lab environments (Active Directory, DNS, DHCP, File Services, Backup, and Monitoring) to actively re-establish and expand my technical career in the Canadian market.</p>
+            <span class="tag">Systems Administration Prep</span>
+            <p><strong>Timeline & Location:</strong> Jan 2025 - Present | Calgary, Alberta, Canada (On-site)</p>
+            <p><strong>The Focus:</strong> Actively re-establishing my IT career in the Canadian market while working in a technical assembly role on a full-time contract.</p>
+            <p><strong>Daily Operations:</strong></p>
+            <ul>
+                <li>Interpreting complex technical drawings and standard operating procedures.</li>
+                <li>Ensuring strict quality control and full compliance with workplace safety regulations.</li>
+            </ul>
+            <p><strong>Technological Preparation:</strong> Concurrently building and administering enterprise-style IT lab environments (Active Directory, DNS, DHCP, File Services, Backup, and Monitoring) and preparing for industry certifications. Open to new opportunities in IT Support, Infrastructure, and Systems Administration.</p>
         </div>
     </section>
 
