--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
       <div class="cta">
         <!-- Replace links below -->
-        <a class="btn primary" href="https://www.linkedin.com/in/SEU-LINKEDIN" target="_blank" rel="noreferrer">View LinkedIn</a>
+        <a class="btn primary" href="https://www.linkedin.com/in/dulcionor-willian-de-oliveira-56102574/" target="_blank" rel="noreferrer">View LinkedIn</a>
         <a class="btn" href="mailto:dulcionor@hotmail.com">Email me</a>
         <a class="btn" href="assets/Dulcionor_Resume.pdf" target="_blank" rel="noreferrer">Download Resume (PDF)</a>
       </div>
