--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <!-- Replace links below -->
         <a class="btn primary" href="https://www.linkedin.com/in/dulcionor-willian-de-oliveira-56102574/" target="_blank" rel="noreferrer">View LinkedIn</a>
         <a class="btn" href="mailto:dulcionor@hotmail.com">Email me</a>
-        <a class="btn" href="assets/Dulcionor_Resume.pdf" target="_blank" rel="noreferrer">Download Resume (PDF)</a>
+        <!--<a class="btn" href="assets/Dulcionor_Resume.pdf" target="_blank" rel="noreferrer">Download Resume (PDF)</a> -->
       </div>
     </section>
 
@@ -296,7 +296,7 @@
           </div>
         </section>
 
-        <!-- PROJECTS -->
+        <!-- PROJECTS 
         <section id="projects" class="card anchor" style="margin-top:16px;">
           <h2>Projects</h2>
 
@@ -319,7 +319,7 @@
               <span class="muted"> • </span>
               <a href="assets/lab-notes.pdf" target="_blank" rel="noreferrer">Lab Notes (PDF)</a>
             </p>
-          </div>
+          </div> -->
 
           <div class="role">
             <h3>Power BI Operational Dashboard (Sample)</h3>
