--- a/index.html
+++ b/index.html
@@ -389,24 +389,23 @@
         </section>
 
         <!-- CONTACT -->
-        <section id="contact" class="card anchor" style="margin-top:16px;">
-          <h2>Contact</h2>
-          <p class="muted" style="margin-top:0;">
-            Open to opportunities in IT Project Management, Infrastructure/Cloud, and IT Service Delivery.
-          </p>
-          <ul>
-            <li>Email: <a href="mailto:dulcionor@hotmail.com">dulcionor@hotmail.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/SEU-LINKEDIN" target="_blank" rel="noreferrer">linkedin.com/in/SEU-LINKEDIN</a></li>
-            <li>GitHub: <a href="https://github.com/DulcionorWillian" target="_blank" rel="noreferrer">github.com/DulcionorWillian</a></li>
-          </ul>
+<section id="contact" class="card anchor" style="margin-top:16px;">
+  <h2>Contact</h2>
+  <p class="muted" style="margin-top:0;">
+    Open to opportunities in IT Project Management, Infrastructure/Cloud, and IT Service Delivery.
+  </p>
+  <ul>
+    <li>Phone: <a href="tel:+13688866616">(368) 886-6616</a></li>
+    <li>Email: <a href="mailto:dulcionor@hotmail.com">dulcionor@hotmail.com</a></li>
+    <li>LinkedIn: <a href="https://www.linkedin.com/in/SEU-LINKEDIN" target="_blank" rel="noreferrer">linkedin.com/in/SEU-LINKEDIN</a></li>
+    <li>GitHub: <a href="https://github.com/DulcionorWillian" target="_blank" rel="noreferrer">github.com/DulcionorWillian</a></li>
+  </ul>
 
-          <div class="cta" style="margin-top:12px;">
-            <a class="btn primary" href="mailto:dulcionor@hotmail.com">Send Email</a>
-            <a class="btn" href="#about">Back to top</a>
-          </div>
-        </section>
-      </aside>
-    </div>
+  <div class="cta" style="margin-top:12px;">
+    <a class="btn primary" href="mailto:dulcionor@hotmail.com">Send Email</a>
+    <a class="btn" href="tel:+13688866616">Call Me</a>
+  </div>
+</section>
 
     <p class="footer">
       © <span id="year"></span> Dulcionor Willian de Oliveira • Built with GitHub Pages
