--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ function togglePhone() {
             </ul>
 
             <div class="hr"></div>
-            <p><b>Tip:</b> replace generic lines with measurable outcomes (SLA %, response time, deployment timelines, cost savings).</p>
+            <!--<p><b>Tip:</b> replace generic lines with measurable outcomes (SLA %, response time, deployment timelines, cost savings).</p>-->
           </div>
 
           <div class="role">
@@ -341,8 +341,8 @@ function togglePhone() {
               Dashboards for SLA tracking, incident trends, and operational KPIs to support leadership decision-making.
             </p>
             <p style="margin-top:10px;">
-              <a href="assets/powerbi-samples.html" target="_blank" rel="noreferrer">Screenshots / Case Study</a>
-            </p>
+             <!-- <a href="assets/powerbi-samples.html" target="_blank" rel="noreferrer">Screenshots / Case Study</a>
+            </p> -->
           </div>
         </section>
       </div>
@@ -397,9 +397,9 @@ function togglePhone() {
             <li>Continuous learning in cloud security and Microsoft ecosystem</li>
           </ul>
           <div class="hr"></div>
-          <p class="muted" style="margin:0;">
-            Tip: add dates, credential IDs, and links (Credly / Microsoft Learn) when available.
-          </p>
+          <!-- <p class="muted" style="margin:0;">
+           Tip: add dates, credential IDs, and links (Credly / Microsoft Learn) when available.
+          </p>  -->
         </section>
 
         <!-- CONTACT -->
