--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@ function togglePhone() {
   <!-- Sticky Nav -->
   <header class="nav">
     <div class="nav-inner">
-      <div class="brand">
+     <!-- <div class="brand">
         <b>Dulcionor Willian de Oliveira</b>
         <span>IT Project | ERP | Azure/M365 | ITIL/ServiceNow</span>
-      </div>
+      </div>-->
 
       <nav class="links" aria-label="Primary navigation">
         <a class="chiplink" href="#about">About</a>
