--- a/index.html
+++ b/index.html
@@ -44,22 +44,20 @@
       backdrop-filter: blur(10px);
       border-bottom:1px solid rgba(34,48,74,.6);
       padding:12px 18px;
-    .nav-inner{
-  max-width: var(--max);
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center; /* <-- centraliza tudo */
-  gap: 16px;
-}
-
-.links{
-  display: flex;
-  gap: 12px;
-  flex-wrap: wrap;
-  justify-content: center; /* <-- centraliza as "chips" */
-}
+    }
+    .nav-inner{max-width:var(--max); margin:0 auto; width:100%; display:flex; align-items:center; justify-content:space-between; gap:16px}
+    .brand{display:flex; flex-direction:column; gap:2px}
+    .brand b{font-size:14px; letter-spacing:.2px}
+    .brand span{font-size:12px; color:var(--muted)}
+    .links{display:flex; gap:12px; flex-wrap:wrap; justify-content:flex-end}
+    .chiplink{
+      font-size:12px;
+      color:var(--text);
+      border:1px solid rgba(34,48,74,.9);
+      background: rgba(15,22,36,.6);
+      padding:8px 10px;
+      border-radius:999px;
+    }
     .chiplink:hover{border-color:rgba(110,168,254,.7); text-decoration:none}
 
     /* Hero */
