--- a/index.html
+++ b/index.html
@@ -388,20 +388,31 @@ function togglePhone() {
           </div>
         </section>
 
-        <!-- CERTIFICATIONS -->
-        <section id="certs" class="card anchor" style="margin-top:16px;">
-          <h2>Certifications & Development</h2>
-          <ul>
-            <li>ITIL (applied in service governance)</li>
-            <li>Azure Infrastructure studies (AZ-800 / AZ-801 lab prep)</li>
-            <li>Continuous learning in cloud security and Microsoft ecosystem</li>
-          </ul>
-          <div class="hr"></div>
-          <!-- <p class="muted" style="margin:0;">
-           Tip: add dates, credential IDs, and links (Credly / Microsoft Learn) when available.
-          </p>  -->
-        </section>
-
+        <!-- EDUCATION & CERTIFICATIONS -->
+<section id="certs" class="card anchor" style="margin-top:16px;">
+  <h2>Education & Certifications</h2>
+  <ul>
+    <li>
+      <strong>Bachelor’s Degree in Computer Science</strong><br>
+      Universidade Paulista (UNIP), Brazil
+    </li>
+    <li>
+      <strong>MCSA: Windows Server 2012</strong><br>
+      Microsoft
+    </li>
+    <li>
+      <strong>Microsoft SQL & Power BI</strong><br>
+      Specialized Training
+    </li>
+    <li>
+      <strong>NetSuite Complete Fundamentals</strong><br>
+      Udemy
+    </li>
+    <li>
+      <strong>In Progress:</strong> Azure Administrator (AZ-800 / AZ-801), CompTIA Network+
+    </li>
+  </ul>
+</section>
         <!-- CONTACT -->
 <section id="contact" class="card anchor" style="margin-top:16px;">
   <h2>Contact</h2>
