--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ function togglePhone() {
             </p>
           </div> -->
 
-          <div class="role">
+          <!--<div class="role">
             <h3>Power BI Operational Dashboard (Sample)</h3>
             <p class="muted">
               Dashboards for SLA tracking, incident trends, and operational KPIs to support leadership decision-making.
