--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@ function togglePhone() {
             </p>
             <p style="margin-top:10px;">
              <!-- <a href="assets/powerbi-samples.html" target="_blank" rel="noreferrer">Screenshots / Case Study</a>
-            </p> -->
+            </p> 
           </div>
         </section>
-      </div>
+      </div>-->
 
       <!-- RIGHT COLUMN -->
       <aside>
