--- a/index.html
+++ b/index.html
@@ -335,17 +335,17 @@ function togglePhone() {
             </p>
           </div> -->
 
-          <!--<div class="role">
+          <div class="role">
             <h3>Power BI Operational Dashboard (Sample)</h3>
             <p class="muted">
               Dashboards for SLA tracking, incident trends, and operational KPIs to support leadership decision-making.
             </p>
             <p style="margin-top:10px;">
              <!-- <a href="assets/powerbi-samples.html" target="_blank" rel="noreferrer">Screenshots / Case Study</a>
-            </p> 
+            </p> -->
           </div>
         </section>
-      </div>-->
+      </div>
 
       <!-- RIGHT COLUMN -->
       <aside>
